[package]
name = "tokio-postgres-rustls-improved"
description = "Fork of tokio-postgres-rustls with unsafe code removed, critical channel binding bug fixed, and a full integration test suite (see repo for code coverage reports)"
version = "0.16.0"
authors = [
	"Dwayne Sykes <github-public@sykes.pw>",
	"Jasper Hugo <jasper@jasperhugo.com>",
	"Aumetra Weisman <aumetra@cryptolab.net>",
	"Conrad Ludgate <conradludgate@gmail.com>",
	"Karsten Borgwaldt <kb@spambri.de>",
	"Philip Dubé <philip@peerdb.io>",
	"Michael Sowka <soilfiction@gmail.com>",
	"ol <ol@teuto.net>",
]
repository = "https://github.com/khorsolutions/tokio-postgres-rustls-improved"
edition = "2024"
rust-version = "1.86"
license = "MIT"
readme = "README.md"

[features]
default = ["aws-lc-rs", "config-stream"]
aws-lc-rs = ["rustls/aws-lc-rs"]
ring = ["rustls/ring"]
config-stream = ["dep:rustls-config-stream"]
tracing = ["rustls-config-stream?/tracing"]

[dependencies]
rustls = { version = "0.23", default-features = false }
rustls-config-stream = { version = "0.2.0", optional = true }
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false, features = [
	"runtime",
] }
tokio-rustls = { version = "0.26", default-features = false }
x509-cert = { version = "0.2.5", default-features = false, features = ["std"] }

[dev-dependencies]
testcontainers = { git = "https://github.com/dsykes16/testcontainers-rs.git", branch = "remove-ring-dependency", default-features = false }
rustls = { version = "0.23", default-features = false, features = [
	"std",
	"logging",
	"tls12",
] }
sha2 = { version = "0.10", default-features = false, features = ["std", "oid"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
thiserror = "2.0.16"
tokio-stream = { version = "0.1.17" }
rcgen = { version = "0.14.5", default-features = false, features = [
	"aws_lc_rs",
	"pem",
] }

[patch.crates-io]
bollard = { git = "https://github.com/mbodmer/bollard.git", branch = "fix-buildkit-feature-not-providerless" }

[workspace.lints.rust]
unused = { level = "deny", priority = -1 }
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
